--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRDMP49YEH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XRDMP49YEH');
+    </script>
     <title>Debanjan Ganguly</title>
   </head>
   <body>
